--- a/scATAC_seq_(2).ipynb
+++ b/scATAC_seq_(2).ipynb
@@ -45,7 +45,7 @@
         "id": "6-v7gtUrSUkd"
       },
       "id": "6-v7gtUrSUkd",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "HYs7RhoU68Ks"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [],
       "id": "HYs7RhoU68Ks"
     },
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "QBQXEKjk7O-V"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [],
       "id": "QBQXEKjk7O-V"
     },
@@ -82,15 +82,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YdiPg8vS7ZKq",
-        "outputId": "4c2a32c9-a86f-4da6-e211-7c8f1b29913f"
+        "outputId": "c1af1714-17cb-4887-9516-349bbc0028e6"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✨🍰✨ Everything looks OK!\n"
+            "⏬ Downloading https://github.com/conda-forge/miniforge/releases/download/23.11.0-0/Mambaforge-23.11.0-0-Linux-x86_64.sh...\n",
+            "📦 Installing...\n",
+            "📌 Adjusting configuration...\n",
+            "🩹 Patching environment...\n",
+            "⏲ Done in 0:00:10\n",
+            "🔁 Restarting kernel...\n"
           ]
         }
       ],
@@ -106,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VITjp1M56yu_",
-        "outputId": "b9cbf1cb-b3aa-456e-ff15-6f451f223a7c"
+        "outputId": "348e162c-4194-426a-f1ea-0952210e7e16"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,9 +135,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S-oCMIm-7p9i",
-        "outputId": "74aec7f5-2a25-46f6-d0dd-4bbae3bde475"
+        "outputId": "c22ec512-fe5e-4aba-b4e5-e9e8aef6c639"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D6zjhdZm-BJp",
-        "outputId": "e1bc2c2c-b11a-473b-87c9-ba59b9b234c9"
+        "outputId": "f1b1dda0-0e89-4595-c8f7-78374c369d4c"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,22 +179,10 @@
         "!conda config --add channels bioconda"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JpJESCcU-fO_",
-        "outputId": "f0c415bd-d42a-41a6-a0ac-1921f32a5d60"
+        "id": "JpJESCcU-fO_"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: 'bioconda' already in 'channels' list, moving to the top\n"
-          ]
-        }
-      ],
+      "execution_count": 7,
+      "outputs": [],
       "id": "JpJESCcU-fO_"
     },
     {
@@ -198,10 +191,43 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "gZdiRWwb1rZJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gZdiRWwb1rZJ",
+        "outputId": "93cd746b-88e0-4ee0-e424-52eb1ec9d7bc"
       },
-      "execution_count": 10,
-      "outputs": [],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/687.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m256.0/687.2 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m687.2/687.2 kB\u001b[0m \u001b[31m10.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.5/17.5 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.0/129.0 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m71.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.3/12.3 MB\u001b[0m \u001b[31m93.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m19.1/19.1 MB\u001b[0m \u001b[31m80.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m32.8/32.8 MB\u001b[0m \u001b[31m55.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.6/64.6 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.9/79.9 MB\u001b[0m \u001b[31m23.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.8/134.8 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.1/40.1 MB\u001b[0m \u001b[31m45.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m62.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.4/50.4 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m119.4/119.4 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.3/5.3 MB\u001b[0m \u001b[31m92.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m229.9/229.9 kB\u001b[0m \u001b[31m13.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m508.0/508.0 kB\u001b[0m \u001b[31m24.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m346.6/346.6 kB\u001b[0m \u001b[31m20.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
       "id": "gZdiRWwb1rZJ"
     },
     {
@@ -210,31 +236,10 @@
         "!pip show snapatac2"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jsCJ2get4W8l",
-        "outputId": "c51ea167-1380-4870-daed-f878c7396833"
+        "id": "jsCJ2get4W8l"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Name: snapatac2\n",
-            "Version: 2.7.1\n",
-            "Summary: SnapATAC2: Single-cell epigenomics analysis pipeline\n",
-            "Home-page: https://github.com/\n",
-            "Author: Kai Zhang <kai@kzhang.org>\n",
-            "Author-email: Kai Zhang <zhangkai33@westlake.edu.cn>\n",
-            "License: MIT\n",
-            "Location: /usr/local/lib/python3.10/site-packages\n",
-            "Requires: anndata, igraph, kaleido, macs3, multiprocess, natsort, numpy, pandas, plotly, polars, pooch, pyarrow, pyfaidx, rustworkx, scikit-learn, scipy, tqdm, typeguard\n",
-            "Required-by: \n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "outputs": [],
       "id": "jsCJ2get4W8l"
     },
     {
@@ -245,7 +250,7 @@
       "metadata": {
         "id": "z2G4FDYqgSmQ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [],
       "id": "z2G4FDYqgSmQ"
     },
@@ -256,31 +261,10 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VZLaiDEzlB1m",
-        "outputId": "ae127f82-ed2f-41b6-d661-e1c6c0b934a7"
+        "id": "VZLaiDEzlB1m"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: umap-learn in /usr/local/lib/python3.10/site-packages (0.5.7)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/site-packages (from umap-learn) (1.26.4)\n",
-            "Requirement already satisfied: scipy>=1.3.1 in /usr/local/lib/python3.10/site-packages (from umap-learn) (1.15.0)\n",
-            "Requirement already satisfied: scikit-learn>=0.22 in /usr/local/lib/python3.10/site-packages (from umap-learn) (1.6.0)\n",
-            "Requirement already satisfied: numba>=0.51.2 in /usr/local/lib/python3.10/site-packages (from umap-learn) (0.60.0)\n",
-            "Requirement already satisfied: pynndescent>=0.5 in /usr/local/lib/python3.10/site-packages (from umap-learn) (0.5.13)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/site-packages (from umap-learn) (4.66.1)\n",
-            "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /usr/local/lib/python3.10/site-packages (from numba>=0.51.2->umap-learn) (0.43.0)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.10/site-packages (from pynndescent>=0.5->umap-learn) (1.4.2)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.10/site-packages (from scikit-learn>=0.22->umap-learn) (3.5.0)\n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "outputs": [],
       "id": "VZLaiDEzlB1m"
     },
     {
@@ -291,7 +275,7 @@
       "metadata": {
         "id": "BCEdegOSgRBg"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [],
       "id": "BCEdegOSgRBg"
     },
@@ -303,7 +287,7 @@
       "metadata": {
         "id": "FVmqXk-vlFrB"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [],
       "id": "FVmqXk-vlFrB"
     },
@@ -315,7 +299,7 @@
       "metadata": {
         "id": "CM_xhHZxUcF5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [],
       "id": "CM_xhHZxUcF5"
     },
@@ -327,7 +311,7 @@
       "metadata": {
         "id": "NYl1nQOhUoj2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [],
       "id": "NYl1nQOhUoj2"
     },
@@ -337,36 +321,15 @@
         "pip show scanpy"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rkvTEjpw_csS",
-        "outputId": "bb7c0407-b8ce-49e0-9c96-bf31998284d6"
+        "id": "rkvTEjpw_csS"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Name: scanpy\n",
-            "Version: 1.10.4\n",
-            "Summary: Single-Cell Analysis in Python.\n",
-            "Home-page: \n",
-            "Author: Alex Wolf, Philipp Angerer, Fidel Ramirez, Isaac Virshup, Sergei Rybakov, Gokcen Eraslan, Tom White, Malte Luecken, Davide Cittaro, Tobias Callies, Marius Lange, Andrés R. Muñoz-Rojas\n",
-            "Author-email: \n",
-            "License: \n",
-            "Location: /usr/local/lib/python3.10/site-packages\n",
-            "Requires: anndata, h5py, joblib, legacy-api-wrap, matplotlib, natsort, networkx, numba, numpy, packaging, pandas, patsy, pynndescent, scikit-learn, scipy, seaborn, session-info, statsmodels, tqdm, umap-learn\n",
-            "Required-by: \n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "outputs": [],
       "id": "rkvTEjpw_csS"
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "4e15629f-bdc4-46dd-8375-a1f2e17960ca"
       },
@@ -378,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "37ff51dc-8860-4ab6-ab44-8223b33ea879"
       },
@@ -396,7 +359,7 @@
       "metadata": {
         "id": "V4DX7Y0t1K1S"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [],
       "id": "V4DX7Y0t1K1S"
     },
@@ -408,13 +371,13 @@
       "metadata": {
         "id": "yb2ApyZm9Bfz"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [],
       "id": "yb2ApyZm9Bfz"
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "f54f07e0-84cc-4ab9-a156-ea8467a76fc4"
       },
@@ -432,13 +395,13 @@
       "metadata": {
         "id": "jIEyfb4NApUa"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [],
       "id": "jIEyfb4NApUa"
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "dfc626e2-9a64-4f0f-8677-1da6e446ea3a"
       },
@@ -451,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "ffa7a645-c56a-4d94-af04-6869e008ca12"
       },
@@ -478,23 +441,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BpK5P48ACJOW",
-        "outputId": "6c9ba406-05f8-4b10-e421-284a14781078"
+        "id": "BpK5P48ACJOW"
       },
       "id": "BpK5P48ACJOW",
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -654,7 +605,7 @@
     },
     {
       "source": [
-        "# @title Distribution of Adjusted P-values\n",
+        "#Distribution of Adjusted P-values\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -875,6 +826,51 @@
       "execution_count": null,
       "outputs": [],
       "id": "QkYcsillINBn"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Process data in batches of 1000"
+      ],
+      "metadata": {
+        "id": "32DJSCEh2l5D"
+      },
+      "id": "32DJSCEh2l5D"
+    },
+    {
+      "source": [
+        "# Split genes into batches of 1000\n",
+        "n_genes = adata_concat.var.shape[0]\n",
+        "batch_size = 1000\n",
+        "n_batches = int(np.ceil(n_genes / batch_size))\n",
+        "\n",
+        "test_batch_total=[]\n",
+        "\n",
+        "# Iterate through batches\n",
+        "for i in range(n_batches):\n",
+        "    start = i * batch_size\n",
+        "    end = min((i + 1) * batch_size, n_genes)\n",
+        "\n",
+        "    # Subset the data for the current batch\n",
+        "    adata_batch = adata_concat[:, start:end]\n",
+        "\n",
+        "    # Perform the Wald test on the batch\n",
+        "    test_batch = de.test.wald(\n",
+        "        data=adata_batch,\n",
+        "        formula_loc=\"~ 1 + Treatment\",\n",
+        "        factor_loc_totest=\"Treatment\"\n",
+        "    )\n",
+        "\n",
+        "    # Combine results (e.g., append to a list)\n",
+        "    test_batch_total.append(test_batch)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "7Jm1-fny2KlO"
+      },
+      "id": "7Jm1-fny2KlO",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
