--- a/scATAC_seq_(2).ipynb
+++ b/scATAC_seq_(2).ipynb
@@ -1659,12 +1659,12 @@
         "adata_concat.obs"
       ],
       "metadata": {
-        "id": "b6I9wzOsk50y",
-        "outputId": "ccc91064-d5eb-49ab-e31f-bd0f9e2052ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "b6I9wzOsk50y",
+        "outputId": "ccc91064-d5eb-49ab-e31f-bd0f9e2052ad"
       },
       "id": "b6I9wzOsk50y",
       "execution_count": 47,
@@ -2100,11 +2100,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "Q4tthAC-luAg",
-        "outputId": "7c12c9c1-b3dd-4616-d277-c790dc5efda5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q4tthAC-luAg",
+        "outputId": "7c12c9c1-b3dd-4616-d277-c790dc5efda5"
       },
       "id": "Q4tthAC-luAg",
       "execution_count": 48,
@@ -2130,11 +2130,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "kh9tMDcXl_9k",
-        "outputId": "c9a82956-58b1-489d-a479-d13e0a726dd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kh9tMDcXl_9k",
+        "outputId": "c9a82956-58b1-489d-a479-d13e0a726dd7"
       },
       "id": "kh9tMDcXl_9k",
       "execution_count": 49,
@@ -2162,11 +2162,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "w0FEiyEIm9GP",
-        "outputId": "3f13df6f-ff1d-46cb-9df8-cc5fde202fcf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w0FEiyEIm9GP",
+        "outputId": "3f13df6f-ff1d-46cb-9df8-cc5fde202fcf"
       },
       "id": "w0FEiyEIm9GP",
       "execution_count": 50,
@@ -2192,11 +2192,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "TshptTfSm-3g",
-        "outputId": "f0303732-2d5c-494b-f2fa-636cfaa106c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TshptTfSm-3g",
+        "outputId": "f0303732-2d5c-494b-f2fa-636cfaa106c4"
       },
       "id": "TshptTfSm-3g",
       "execution_count": 51,
@@ -2229,7 +2229,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Process data in batches of 1000"
+        "# Make observation names unique\n",
+        "\n"
       ],
       "metadata": {
         "id": "32DJSCEh2l5D"
@@ -2279,11 +2280,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "l0OatC7q5nG1",
-        "outputId": "0705a508-9f39-4223-f13a-fd5b010ebdb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l0OatC7q5nG1",
+        "outputId": "0705a508-9f39-4223-f13a-fd5b010ebdb3"
       },
       "id": "l0OatC7q5nG1",
       "execution_count": 70,
@@ -2317,11 +2318,11 @@
         "adata_concat"
       ],
       "metadata": {
-        "id": "43XkaK1f3oRC",
-        "outputId": "6d214c47-8a06-4f8f-8e3f-2cb2937ded3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "43XkaK1f3oRC",
+        "outputId": "6d214c47-8a06-4f8f-8e3f-2cb2937ded3a"
       },
       "id": "43XkaK1f3oRC",
       "execution_count": 71,
@@ -2348,11 +2349,11 @@
         "adata_concat.var_names"
       ],
       "metadata": {
-        "id": "5kpwCghN3xTE",
-        "outputId": "d6fc5e6d-d52d-46d9-e41d-b42453e27f20",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5kpwCghN3xTE",
+        "outputId": "d6fc5e6d-d52d-46d9-e41d-b42453e27f20"
       },
       "id": "5kpwCghN3xTE",
       "execution_count": 72,
@@ -2380,11 +2381,11 @@
         "adata_concat.obs_names"
       ],
       "metadata": {
-        "id": "ArelK3lA3xCp",
-        "outputId": "6ed2fab7-2f5b-4ad6-e92f-a5e055548293",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ArelK3lA3xCp",
+        "outputId": "6ed2fab7-2f5b-4ad6-e92f-a5e055548293"
       },
       "id": "ArelK3lA3xCp",
       "execution_count": 76,
@@ -2413,12 +2414,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data subsample"
+        "# Run diffxpy wald test"
       ],
       "metadata": {
         "id": "1065sP5b72y1"
       },
       "id": "1065sP5b72y1"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2zSRGUps70_p"
+      },
+      "id": "2zSRGUps70_p",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
