--- a/scATAC_seq_(2).ipynb
+++ b/scATAC_seq_(2).ipynb
@@ -2423,13 +2423,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "test = de.test.wald(\n",
+        "    data=adata_concat,\n",
+        "    formula_loc=\"~ 1 + Treatment\",\n",
+        "    factor_loc_totest=\"Treatment\"\n",
+        ")\n"
+      ],
       "metadata": {
-        "id": "2zSRGUps70_p"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2zSRGUps70_p",
+        "outputId": "cd8ebfad-647e-46f5-8e7c-270bc8f0106d"
       },
       "id": "2zSRGUps70_p",
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "training location model: False\n",
+            "training scale model: True\n",
+            "iter   0: ll=63915586792.117393\n",
+            "iter   1: ll=63915586792.117393, converged: 0.00% (loc: 100.00%, scale update: False), in 0.00sec\n",
+            "Fitting 53017 dispersion models: (progress not available with multiprocessing)"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
