--- a/scATAC_seq_(2).ipynb
+++ b/scATAC_seq_(2).ipynb
@@ -2422,36 +2422,24 @@
       "id": "1065sP5b72y1"
     },
     {
-      "cell_type": "code",
       "source": [
+        "# Subsample features (e.g., top 1000 highly variable genes)\n",
+        "adata_subset = adata_concat[:, adata_concat.var['highly_variable'][:1000].index]\n",
+        "\n",
+        "# Then, perform the Wald test on the subset:\n",
         "test = de.test.wald(\n",
-        "    data=adata_concat,\n",
+        "    data=adata_subset,\n",
         "    formula_loc=\"~ 1 + Treatment\",\n",
         "    factor_loc_totest=\"Treatment\"\n",
-        ")\n"
+        ")"
       ],
+      "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2zSRGUps70_p",
-        "outputId": "cd8ebfad-647e-46f5-8e7c-270bc8f0106d"
+        "id": "EfjTiCvE-LbW"
       },
-      "id": "2zSRGUps70_p",
+      "id": "EfjTiCvE-LbW",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "training location model: False\n",
-            "training scale model: True\n",
-            "iter   0: ll=63915586792.117393\n",
-            "iter   1: ll=63915586792.117393, converged: 0.00% (loc: 100.00%, scale update: False), in 0.00sec\n",
-            "Fitting 53017 dispersion models: (progress not available with multiprocessing)"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
