--- a/scATAC_seq_(2)_DA_diffxpy.ipynb
+++ b/scATAC_seq_(2)_DA_diffxpy.ipynb
@@ -1339,12 +1339,12 @@
         "adata_concat.var"
       ],
       "metadata": {
-        "id": "AGtGJBTyQogA",
-        "outputId": "d1c69dbf-fab2-4ba8-9d8e-6a79826380d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "AGtGJBTyQogA",
+        "outputId": "d1c69dbf-fab2-4ba8-9d8e-6a79826380d9"
       },
       "id": "AGtGJBTyQogA",
       "execution_count": 46,
@@ -1752,11 +1752,11 @@
         "adata_concat"
       ],
       "metadata": {
-        "id": "HlBcXV1sP-Nt",
-        "outputId": "04cf3844-80f2-4738-a211-9c56d49080ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HlBcXV1sP-Nt",
+        "outputId": "04cf3844-80f2-4738-a211-9c56d49080ff"
       },
       "id": "HlBcXV1sP-Nt",
       "execution_count": 47,
@@ -1779,6 +1779,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import dask.array as da"
+      ],
+      "metadata": {
+        "id": "OD_rnA0PViuQ"
+      },
+      "id": "OD_rnA0PViuQ",
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
       "source": [
         "# Subsample features (e.g., top 1000 highly variable genes)\n",
         "adata_subset = adata_concat[:, adata_concat.var['highly_variable_rank'][:1000].index]\n",
@@ -1787,6 +1799,9 @@
         "if adata_subset.X.size == 0:\n",
         "    print(\"Error: The subset is empty. Please check your data or adjust the subsetting criteria.\")\n",
         "else:\n",
+        "    # Convert to Dask array with explicit chunks\n",
+        "    adata_subset.X = da.from_array(adata_subset.X, chunks=(adata_subset.shape[0], 1))\n",
+        "\n",
         "    # Proceed with the Wald test\n",
         "    test = de.test.wald(\n",
         "        data=adata_subset,\n",
@@ -1796,13 +1811,13 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "9mqxrZ5tQPyj",
-        "outputId": "bfce80c4-db6a-4ede-84d4-7c1a5cd2a796",
+        "id": "W1T-kAyNVbxi",
+        "outputId": "dc854b68-d4f6-4521-a355-ebbacf57fb37",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "id": "9mqxrZ5tQPyj",
+      "id": "W1T-kAyNVbxi",
       "execution_count": null,
       "outputs": [
         {
