--- a/scATAC_seq_(2)_DA_diffxpy.ipynb
+++ b/scATAC_seq_(2)_DA_diffxpy.ipynb
@@ -22,8 +22,8 @@
         "(1) https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-preprocessing-tenx/tutorial.html#mapping-reads-to-a-reference-genome, (2) https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-standard-processing-snapatac2/tutorial.html\n",
         "Data taken from the following NCBI study:\n",
         "Metabolic adaptation pilots the differentiation of human hematopoietic cells (https://www.ncbi.nlm.nih.gov/bioproject/PRJNA1015713)\n",
-        "Import Anndata objects for two biological replicates, SRR26046013 (cells treated with AOA inhibitor) and SRR26046019 (untreated cells)\n",
-        "Perform following steps:\n",
+        "Import preprocessed Anndata object for four biological replicates, SRR26046013 (cells treated with AOA inhibitor), SRR26046015 (cells treated with AOA inhibitor)  SRR26046019 (untreated cells)\n",
+        "Following steps were performed:\n",
         "(1) Import matrices\n",
         "(2) Compute fragment size distribution\n",
         "(3) Compute TSS enrichment\n",
@@ -2730,12 +2730,12 @@
         "test_tt.summary()"
       ],
       "metadata": {
-        "id": "ghFHePOAVITv",
-        "outputId": "71720240-f06e-4f32-c435-3641a6583a94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "ghFHePOAVITv",
+        "outputId": "71720240-f06e-4f32-c435-3641a6583a94"
       },
       "id": "ghFHePOAVITv",
       "execution_count": 64,
@@ -3146,12 +3146,12 @@
         ")"
       ],
       "metadata": {
-        "id": "eHAL2-QpVFJi",
-        "outputId": "ca359ab6-0f75-4195-a348-cd549e7c44fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
-        }
+        },
+        "id": "eHAL2-QpVFJi",
+        "outputId": "ca359ab6-0f75-4195-a348-cd549e7c44fe"
       },
       "id": "eHAL2-QpVFJi",
       "execution_count": 65,
@@ -3184,12 +3184,12 @@
         "test_tt.plot_volcano()"
       ],
       "metadata": {
-        "id": "6kN0QHClVePT",
-        "outputId": "4fffdd17-7002-4ce1-af26-880ce90fd47b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "6kN0QHClVePT",
+        "outputId": "4fffdd17-7002-4ce1-af26-880ce90fd47b"
       },
       "id": "6kN0QHClVePT",
       "execution_count": 66,
@@ -3212,12 +3212,12 @@
         "test_tt.plot_ma()"
       ],
       "metadata": {
-        "id": "ueW0AIIvVrME",
-        "outputId": "ed87603b-dec1-4920-d1d3-e33f7e23b2d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "ueW0AIIvVrME",
+        "outputId": "ed87603b-dec1-4920-d1d3-e33f7e23b2d6"
       },
       "id": "ueW0AIIvVrME",
       "execution_count": 67,
