--- a/scATAC_seq_(2)_DA_diffxpy.ipynb
+++ b/scATAC_seq_(2)_DA_diffxpy.ipynb
@@ -22,8 +22,8 @@
         "(1) https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-preprocessing-tenx/tutorial.html#mapping-reads-to-a-reference-genome, (2) https://usegalaxy.eu/training-material/topics/single-cell/tutorials/scatac-standard-processing-snapatac2/tutorial.html\n",
         "Data taken from the following NCBI study:\n",
         "Metabolic adaptation pilots the differentiation of human hematopoietic cells (https://www.ncbi.nlm.nih.gov/bioproject/PRJNA1015713)\n",
-        "Import preprocessed Anndata object for four biological replicates, SRR26046013 (cells treated with AOA inhibitor), SRR26046015 (cells treated with AOA inhibitor)  SRR26046019 (untreated cells)\n",
-        "Following steps were performed:\n",
+        "Import preprocessed Anndata object for four biological replicates, SRR26046013 (cells treated with AOA inhibitor), SRR26046015 (cells treated with DON inhibitor), SRR26046017 (cells treated with DG inhibitor), and SRR26046019 (untreated cells).\n",
+        "Following steps were performed in the preprocessing:\n",
         "(1) Import matrices\n",
         "(2) Compute fragment size distribution\n",
         "(3) Compute TSS enrichment\n",
