--- a/scATAC_seq_(1).ipynb
+++ b/scATAC_seq_(1).ipynb
@@ -1886,146 +1886,76 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "id": "7ab463c4-c21e-4fbf-85e0-f70e4f6b91f2",
-      "metadata": {
-        "id": "7ab463c4-c21e-4fbf-85e0-f70e4f6b91f2"
-      },
       "source": [
-        "# Differential accesibility analysis"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np"
+        "!pip install pydeseq2  # Install PyDESeq2\n",
+        "!pip install pandas #Install Pandas"
       ],
+      "cell_type": "code",
       "metadata": {
-        "id": "xRVSWxoGo1by"
+        "id": "8-JpAgQ0kDwJ"
       },
-      "id": "xRVSWxoGo1by",
+      "id": "8-JpAgQ0kDwJ",
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ffa7a645-c56a-4d94-af04-6869e008ca12",
-      "metadata": {
-        "id": "ffa7a645-c56a-4d94-af04-6869e008ca12"
-      },
-      "outputs": [],
       "source": [
-        "from scipy import stats"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "62023b15-0427-43d2-ada2-edbaf46b20cb",
-      "metadata": {
-        "id": "62023b15-0427-43d2-ada2-edbaf46b20cb"
-      },
-      "outputs": [],
-      "source": [
-        "# Assuming adata is your AnnData object\n",
-        "condition1 = adata_concat[adata_concat.obs['Treatment'] == 'Treated w/AOA']\n",
-        "condition2 = adata_concat[adata_concat.obs['Treatment'] == 'Untreated']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "ca4915b7-81f6-4768-bd12-4e5288c6f329",
-      "metadata": {
-        "id": "ca4915b7-81f6-4768-bd12-4e5288c6f329"
-      },
-      "outputs": [],
-      "source": [
-        "# Perform a t-test for each peak/gene\n",
-        "pvals = []\n",
-        "for peak in adata_concat.var_names:\n",
-        " _, pval = stats.ttest_ind(condition1[:, peak].X.toarray(), condition2[:, peak].X.toarray())\n",
-        " pvals.append(pval)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "0acc1066-bb4a-4c71-999a-c77e58d65cbd",
-      "metadata": {
-        "id": "0acc1066-bb4a-4c71-999a-c77e58d65cbd"
-      },
-      "outputs": [],
-      "source": [
-        "# Adjust p-values for multiple testing (e.g., using Benjamini-Hochberg)\n",
-        "from statsmodels.stats.multitest import multipletests\n",
-        "_, pvals_adj, _, _ = multipletests(pvals, method='fdr_bh')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8f560497-6eaa-4600-af81-cddaf3db3a7d",
-      "metadata": {
-        "id": "8f560497-6eaa-4600-af81-cddaf3db3a7d"
-      },
-      "outputs": [],
-      "source": [
-        "# Add p-values to AnnData object\n",
-        "adata.var['pvals'] = pvals\n",
-        "adata.var['pvals_adj'] = pvals_adj"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "805e9c59-a29c-4220-b5b6-ba9d7672844e",
-      "metadata": {
-        "id": "805e9c59-a29c-4220-b5b6-ba9d7672844e"
-      },
-      "outputs": [],
-      "source": [
-        "Filter Significant DARs: Filter the results to retain only those regions that are significantly differentially accessible after multiple testing correction."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "4a5ba1af-324e-4599-8f0b-b76349556e07",
-      "metadata": {
-        "id": "4a5ba1af-324e-4599-8f0b-b76349556e07"
-      },
-      "outputs": [],
-      "source": [
-        "significant_dars = adata.var[adata.var['pvals_adj'] < 0.05]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "7acd26c4-c431-4a47-8aeb-4edf6520b75d",
-      "metadata": {
-        "id": "7acd26c4-c431-4a47-8aeb-4edf6520b75d"
-      },
-      "outputs": [],
-      "source": [
-        "Visualize Results: Visualize the differentially accessible regions using various plotting functions available in scanpy or other visualization libraries."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "575eb596-0196-4dc9-831d-c883201014a0",
-      "metadata": {
-        "id": "575eb596-0196-4dc9-831d-c883201014a0"
-      },
-      "outputs": [],
-      "source": [
-        "sc.pl.heatmap(adata, var_names=significant_dars.index, groupby='condition')\n",
+        "import scanpy as sc\n",
+        "import snapatac2 as snap\n",
         "\n",
-        "Interpret Results: Interpret the biological significance of the differentially accessible regions. This might involve looking at the genes associated with these regions and understanding their roles in the biological conditions you are studying."
-      ]
+        "# Create cell-by-gene matrix (replace with cell-by-bin if appropriate)\n",
+        "gene_matrix_1 = snap.pp.make_gene_matrix(your_adata_object_1, snap.genome.hg38)\n",
+        "gene_matrix_2 = snap.pp.make_gene_matrix(your_adata_object_2, snap.genome.hg38)\n",
+        "\n",
+        "# Extract count matrices and convert to pandas DataFrames\n",
+        "count_matrix_1 = gene_matrix_1.X.toarray()  # Assuming count data is in .X\n",
+        "count_matrix_2 = gene_matrix_2.X.toarray()\n",
+        "count_df_1 = pd.DataFrame(count_matrix_1, index=gene_matrix_1.obs_names, columns=gene_matrix_1.var_names)\n",
+        "count_df_2 = pd.DataFrame(count_matrix_2, index=gene_matrix_2.obs_names, columns=gene_matrix_2.var_names)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdejzyXrkExD"
+      },
+      "id": "gdejzyXrkExD",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "source": [
+        "metadata_df = pd.DataFrame(index=count_df.index)\n",
+        "metadata_df['treatment'] = ['condition1'] * len(your_adata_object_1.obs_names) + ['condition2'] * len(your_adata_object_2.obs_names)  # Replace with your conditions\n",
+        "# ... add other metadata variables as needed"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "w0pH-nd1kGpt"
+      },
+      "id": "w0pH-nd1kGpt",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "source": [
+        "import pydeseq2\n",
+        "\n",
+        "# Combine the two scATAC-seq count matrices\n",
+        "count_df = pd.concat([count_df_1, count_df_2], axis=0)\n",
+        "\n",
+        "# Construct a DESeqDataSet object\n",
+        "dds = pydeseq2.DESeqDataSet(count_df, metadata_df, design_formula='~ treatment')  # Adjust design formula\n",
+        "\n",
+        "# Perform differential accessibility analysis\n",
+        "dds.run_deseq()\n",
+        "dds.get_results()"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "gLpsdJc-kH8L"
+      },
+      "id": "gLpsdJc-kH8L",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
