--- a/scATAC_seq_(1)_DA_PyDESeq2.ipynb
+++ b/scATAC_seq_(1)_DA_PyDESeq2.ipynb
@@ -852,7 +852,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#MOdify barcode names to reflect experiment number\n",
+        "#Modify barcode names to reflect experiment number\n",
         "new_barcode_names_2 = gene_matrix_2_subset.obs_names + '_2'\n",
         "new_barcode_names_2"
       ],
@@ -2008,11 +2008,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "t-zPCrPTTziy",
-        "outputId": "8f093460-c9ed-4e37-c949-6a7c4694c1a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t-zPCrPTTziy",
+        "outputId": "8f093460-c9ed-4e37-c949-6a7c4694c1a3"
       },
       "id": "t-zPCrPTTziy",
       "execution_count": 141,
@@ -2056,12 +2056,12 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "ZNR2I7MFiuzx",
-        "outputId": "afa31851-662d-4bb0-ca90-4a0097f0da08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 512
-        }
+        },
+        "id": "ZNR2I7MFiuzx",
+        "outputId": "afa31851-662d-4bb0-ca90-4a0097f0da08"
       },
       "id": "ZNR2I7MFiuzx",
       "execution_count": 143,
